--- a/force-app/main/default/classes/TrialSearchContainerRemote.cls
+++ b/force-app/main/default/classes/TrialSearchContainerRemote.cls
@@ -52,8 +52,8 @@ public with sharing class TrialSearchContainerRemote {
     public class TrialTDO {
         @AuraEnabled
         public Clinical_Trial_Profile__c ctp;
-//        @AuraEnabled
-//        public List<Therapeutic_Area__c> cois;
+        @AuraEnabled
+        public Boolean relatedNotificationExists;
         @AuraEnabled
         public Boolean isEnrollingCTP;
     }
