--- a/force-app/main/default/classes/TrialItemRemote.cls
+++ b/force-app/main/default/classes/TrialItemRemote.cls
@@ -5,12 +5,18 @@ public with sharing class TrialItemRemote {
 
     @AuraEnabled
     public static void createCaseToStudy(Participant__c participant, Boolean isDelegate) {
-        if (participant.Id != null && !isDelegate) {
-            System.debug('For Me....');
-            update participant;
-        } else {
-            System.debug('Some else....');
+        try {
+            TrialSearchHelper helper = (TrialSearchHelper) ClassFactory.newInstance(TrialSearchHelper.class);
+            helper.createCaseAndSendNotification(participant);
+            if (participant.Id != null && !isDelegate) {
+                System.debug('For Me....');
+                update participant;
+            } else {
+                System.debug('Some else....');
+            }
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
         }
-        System.debug('participant ===> ' + participant);
+
     }
 }
