--- a/force-app/main/default/classes/TrialSearchHelper.cls
+++ b/force-app/main/default/classes/TrialSearchHelper.cls
@@ -124,6 +124,38 @@ public with sharing class TrialSearchHelper {
         proxy.upsertRecords(taps, false);
     }
 
+    public void createCaseAndSendNotification(Participant__c participant) {
+        DatabaseProxy proxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
+        String query = 'SELECT ' +
+                'Id, ' +
+                'Name ' +
+                'FROM Group ' +
+                'WHERE Type = \'' + 'Queue' + '\' ' +
+                'AND Name = \'' + 'PEH Case Queue' + '\' ' +
+                'LIMIT 1';
+        Group queueGroup = (Group) proxy.query(query, true)[0];
+        System.debug(' queueId ===> ' + queueGroup.Id);
+        System.debug('participant ===> ' + participant);
+        Case caseContact = new Case(
+                OwnerId = queueGroup.Id,
+                Country__c = participant.Mailing_Country_Code__c,
+                Email_address__c = participant.Email__c,
+                First_Name__c = participant.First_Name__c,
+                Date_of_Birth__c = participant.Date_of_Birth__c,
+                Last_Name__c = participant.Last_Name__c,
+                Gender__c = participant.Gender__c,
+                Phone_Type__c = participant.Phone_Type__c,
+                Phone__c = participant.Phone__c,
+                Postal_code__c = participant.Mailing_Zip_Postal_Code__c,
+                State__c = participant.Mailing_State__c
+        );
+
+        Database.DMLOptions dlo = new Database.DMLOptions();
+        dlo.emailHeader.triggerAutoResponseEmail = true;
+        caseContact.setOptions(dlo);
+        System.debug(' ===> insert Case' + caseContact);
+        Database.insert(caseContact);
+    }
     private List<TrialSearchContainerRemote.TrialTDO> getTrialTDOs(Set<Id> taIds, List<Clinical_Trial_Profile__c> ctps, DatabaseProxy proxy) {
         List<TrialSearchContainerRemote.TrialTDO> trialTDOS = new List<TrialSearchContainerRemote.TrialTDO>();
         for (Clinical_Trial_Profile__c ctp : ctps) {
