REF-513 and REF-518 fixed

--- a/force-app/main/default/classes/CommunityModeService.cls
+++ b/force-app/main/default/classes/CommunityModeService.cls
@@ -81,6 +81,9 @@ public without sharing class CommunityModeService {
                 return communityMode;
             }
         }
+        if(!allModes.isEmpty()){
+            return allModes[0];
+        }
         return null;
     }
     
