--- a/force-app/main/default/classes/StudyDetailItem.cls
+++ b/force-app/main/default/classes/StudyDetailItem.cls
@@ -88,7 +88,9 @@ public without sharing class StudyDetailItem implements Comparable {
             this.actions = actions;
             this.accounts = accounts;
             if(studySite.Principal_Investigator__c != CommunityService.getUserContact().Id){
-                PIName = studySite.Principal_Investigator__r.Name;
+                PIName = (studySite.Principal_Investigator__r.Salutation == null ? '' :studySite.Principal_Investigator__r.Salutation + ' ')
+                        + studySite.Principal_Investigator__r.FirstName + ' ' + studySite.Principal_Investigator__r.LastName
+                        + (studySite.Principal_Investigator__r.Suffix == null ? '' : ' ' + studySite.Principal_Investigator__r.Suffix);
             }
         }
     }
