--- a/force-app/main/default/classes/StudySiteService.cls
+++ b/force-app/main/default/classes/StudySiteService.cls
@@ -224,6 +224,9 @@ public without sharing class StudySiteService {
             'Clinical_Trial_Profile__r.Orientation_Required__c',
             'Clinical_Trial_Profile__r.Patient_Portal_Enabled__c',
             'Principal_Investigator__r.Name',
+            'Principal_Investigator__r.FirstName',
+            'Principal_Investigator__r.LastName',
+            'Principal_Investigator__r.Suffix',
             'Principal_Investigator__r.Title',
             'Principal_Investigator__r.MailingStreet',
             'Principal_Investigator__r.MailingCity',
