--- a/force-app/main/default/classes/PIStudiesFilter.cls
+++ b/force-app/main/default/classes/PIStudiesFilter.cls
@@ -85,6 +85,9 @@ public without sharing class PIStudiesFilter implements SearchFilter {
             'Clinical_Trial_Profile__r.Orientation_Required__c',
             'Clinical_Trial_Profile__r.Include_in_patient_trial_search__c',
             'Principal_Investigator__r.Name',
+            'Principal_Investigator__r.FirstName',
+            'Principal_Investigator__r.LastName',
+            'Principal_Investigator__r.Suffix',
             'Principal_Investigator__r.Title',
             'Principal_Investigator__r.MailingStreet',
             'Principal_Investigator__r.MailingCity',
